Add Events types when get step types to rerun